# omni-desktop

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  Dockerfile  IMPROVEMENT_PLAN.md  README.md  dev-app-update.yml  docker-compose.postgres.yml  download_uv.ts  electron-builder.config.ts  electron.vite.config.ts  eslint.config.ts  index.dev.html  index.html  knip.ts  package-lock.json  package.json  playwright.config.ts  vite.browser.config.ts  vite.server.config.ts  vitest.config.ts
docker/: postgres-init.sql
docs/: browser-server-proxy-overhaul-plan.md  chat-unification-plan.md  cloud-state-invariant.md  codex-oauth-integration.md  computer-as-sandbox-plan.md  index.html  laptop-as-sandbox-plan.md  pr-detection-smoke.md  proxy-security-contract.md  sandbox-terminal-plan.md  teams-implementation-plan.md  teams-settings-merge.md
infra/: DEPLOY.md  README.md  deploy.env.sample  deploy.sh  main.bicep  main.parameters.json
public/: manifest.webmanifest
sandbox-cli/: Cargo.toml
sandbox-cli/src/: main.rs
sandbox-cli/src/sandbox/: linux.rs  macos.rs  mod.rs  windows.rs
sandbox-cli/src/vm/: accel.rs  image.rs  mod.rs  qemu.rs  readiness.rs
sandbox-image/: Dockerfile  Dockerfile.min  README.md  apply-network-isolation.sh  entrypoint.min.sh  entrypoint.sh
scripts/: audit-project-configs.mjs  build-launcher-image.sh  build-sandbox.mjs  build-sandbox.sh  build-vm-image.sh  customSign.js  download-sandbox.mjs  download-uv.mjs  download-vcredist.mjs  omni-code-version.mjs  rebuild-if-needed.mjs  recover-tickets-from-electron-store.mjs  (+2 more)
(+859 files in other folders)
