[package]
name = "omni-sandbox"
version = "0.2.0"
edition = "2021"
description = "Cross-platform process sandboxing CLI for Omni Code"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

# VM sandbox (QEMU image management)
sha2 = "0.10"
ureq = "3"
zstd = "0.13"
dirs = "6"

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
